Fixed wrong padding in social buttons

--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -382,12 +382,6 @@ li#nav_publica>a:hover {background:#12a563;}
   line-height:16px;
   margin: 6px 0 0;
 }
-#drop_boletin, 
-#drop_facebook, 
-#drop_twitter, 
-#drop_google {
-	padding: 15px 15px 16px;
-}
 /*==========  FACEBOOK  ==========*/
 #menu_facebook {
   padding-bottom:10px;
